# turbospeed-files

./: .gitignore  Makefile  README.md  _config.yaml  file-sizes.yaml  file_sizes.json  pyproject.toml  ruff.toml
.github/workflows/: generate-files.yaml
docs/: 404.html  index.html
docs/_layouts/: redirect.html
docs/_redirects/: 1.25gb.md  1.2gb.md  1.2gib.md  1.5gb.md  1.5gib.md  1.75gb.md  1.8gb.md  1.8gib.md  100kb.md  100kib.md  100mb.md  100mib.md  10mb.md  10mib.md  150mb.md  150mib.md  1gb.md  1gib.md  1kb.md  1kib.md  1mb.md  1mib.md  200mb.md  200mib.md  250kb.md  250kib.md  250mb.md  250mib.md  25kb.md  25kib.md  25mb.md  25mib.md  2gb.md  2gib.md  300mb.md  300mib.md  350mb.md  350mib.md  400mb.md  400mib.md  (+16 more)
docs/css/: style.css
docs/js/: redirect.js
scripts/: generate_files.py
