[project]
name = "turbospeed-files"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "humanfriendly>=10.0",
    "humanize>=4.14.0",
    "orjson>=3.11.4",
    "typer>=0.20.0",
]

[dependency-groups]
lint = [
    "ruff>=0.14.3",
]
